# product-manager

./: .gitignore  CLAUDE.md  README.md
.claude/: AGENTS.md  settings.json  skill-dependencies.yaml  skill-routing.yaml  workflow-stage.yaml  workflow-state.yaml
.claude/agents/: default.md  designer.md  engineer.md  pm.md
.claude/hooks/: on-pr-event.sh  on-session-start.sh  on-stop.sh  post-tool-use.sh  pre-tool-use.sh
.claude/schemas/: agent-definition.schema.json  stage-definition.schema.json  workflow-stage.schema.json  workflow-template.schema.json
.claude/skills/: dependencies.yaml  routing.yaml
.claude/skills/build-product-prototype/: SKILL.md
.claude/skills/clarify-requirements/: SKILL.md
.claude/skills/draft-product-design/: SKILL.md
.claude/skills/interview-workflow/: skill.yaml
.claude/skills/lincoln-build-codebase-knowledge/: SKILL.md
.claude/skills/lincoln-explore-opensource/: SKILL.md
.claude/skills/lincoln-handoff/: SKILL.md
.claude/skills/lincoln-init-branch/: SKILL.md
.claude/skills/lincoln-status/: SKILL.md
.claude/stages/: stage-manifest.yaml
.claude/workflows/: interview-to-knowledge.yaml
.github/: openspec-config.yml
.github/ISSUE_TEMPLATE/: interview-derived.md
.github/lincoln-sync-queue/: pr-10.yaml  pr-7.yaml  pr-9.yaml
.github/workflows/: knowledge-sync.yml  openspec-check.yml
docs/framework/: evaluation-rubric.md  framework-design.md  skill-routing-guide.md  user-journey.md
docs/knowledge/: 00-index.md  05-glossary.md
scripts/: build_codebase_knowledge.py  check-skill-dependencies.sh  init-lincoln-branch.sh  init-project.sh  lincoln-audit.py  lincoln-status.py  list-active-lincoln-branches.sh  stage_loader.py  static-check.sh  sync-external-agents.sh  validate_stage.py
tests/: conftest.py  test_build_codebase_knowledge.py  test_lincoln_audit.py  test_lincoln_status.py  test_new_skills.py  test_skill_dependencies.py  test_skill_routing.py  test_stage_manifest.py  test_workflow_contracts.py  test_workflow_router.py  test_workflow_state.py
tests/validators/: conftest.py  test_prototype_and_tdd.py
tools/record-interview/: README.md  pyproject.toml
tools/record-interview/record_interview/: checks.py  cli.py  recorder.py  validator.py
tools/record-interview/record_interview/tui/screens/: recording.py  setup.py
tools/record-interview/tests/: test_checks.py  test_chunked_recorder.py  test_cli.py  test_cli_tui.py  test_config.py  test_diarizer.py  test_errors.py  test_knowledge_loader.py  test_metadata.py  test_phased_summary.py  test_recorder.py  test_summary_screen.py  test_tui.py  test_validator.py  test_worktree.py
(+96 files in other folders)
