[project]
name = "lincoln-record-interview"
version = "0.1.0"
description = "CLI wrapper to record Lincoln interviews and trigger process-interview"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70",
    "pyyaml>=6.0",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "freezegun>=1.5", "pytest-mock>=3.14", "pytest-cov>=5.0", "textual-dev>=1.0"]
local = ["pyannote.audio>=3.3"]
api = ["openai>=1.0", "anthropic>=0.30"]

[project.scripts]
record-interview = "record_interview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["record_interview"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=record_interview --cov-report=term-missing --cov-fail-under=80"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
